[project]
name = "slr-on-github-repositories"
version = "0.2.0"
description = "Use systematic literature review technique to investigate how researchers collected the repositories from GitHub as a dataset."
authors = [
    {name = "Pongchai Jaisri",  email = "ppjaisri@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "openai (>=2.7.1,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pypdf (>=6.1.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
